# quickbase-cli

./: .gitignore  Cargo.toml  README.md
.codex/skills/quickbase-api/: SKILL.md
.codex/skills/quickbase-api/references/: argument-model.md  operation-index.md  quickbase-rest-api.yaml
.codex/skills/quickbase-cli/: SKILL.md
.codex/skills/quickbase-cli/references/: commands.md  config.md
.codex/skills/rust/: SKILL.md
examples/.quickbase/: quickbase.jsonc
src/: cli.rs  cmd.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  server.rs  skills.rs  util.rs
src/mock/: mod.rs  routes.rs  server.rs  state.rs  storage.rs
src/quickbase/: client.rs  mod.rs  operation.rs  operations.json  reference.rs  request.rs
tests/: all_operations.rs  cli_smoke.rs  cmd_against_mock.rs  cmd_cli.rs  config_cli.rs  make_skill.rs  mock_server.rs
tests/fixtures/config/: invalid-mode.jsonc  valid.jsonc
