[package]
name = "quickbase-cli"
version = "0.1.0"
edition = "2024"
include = [
    "Cargo.lock",
    "Cargo.toml",
    "README.md",
    ".codex/skills/quickbase-api/**",
    ".codex/skills/quickbase-cli/**",
    "examples/.quickbase/quickbase.jsonc",
    "src/**",
    "tests/**",
]

[[bin]]
name = "quickbase"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
axum = "=0.8.9"
clap = { version = "=4.6.1", features = ["derive"] }
directories = "=6.0.0"
jsonc-parser = "=0.32.4"
reqwest = { version = "=0.13.4", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
assert_cmd = "=2.2.2"
predicates = "=3.1.4"
tempfile = "=3.27.0"
yaml_serde = "=0.10.4"
